// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentEvent is rendered with custom content 1`] = `
<div
  class="euiCommentEvent testClass1 testClass2 emotion-euiCommentEvent-custom"
  data-type="custom"
>
  <div
    class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
  >
    <p>
      Some custom content
    </p>
  </div>
</div>
`;

exports[`EuiCommentEvent props event is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain emotion-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData emotion-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerEvent emotion-euiCommentEvent__headerEvent"
          >
            commented
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props eventColor is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-custom"
  data-type="custom"
/>
`;

exports[`EuiCommentEvent props eventIcon and eventIconAriaLabel are rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain emotion-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData emotion-euiCommentEvent__headerData"
        >
          <div
            aria-hidden="false"
            aria-label="edit"
            class="euiAvatar euiAvatar--s euiAvatar--user euiCommentEvent__headerEventIcon emotion-euiAvatar-s-user-subdued-euiCommentEvent__headerEventIcon"
            role="img"
            title="edit"
          >
            <span
              class="euiAvatar__icon"
              data-euiicon-type="pencil"
            />
          </div>
          <div
            class="euiCommentEvent__headerUsername emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props timestamp is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
  data-type="update"
>
  <div
    class="euiCommentEvent__header emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent"
    >
      <div
        class="euiCommentEvent__headerMain emotion-euiCommentEvent__headerMain"
      >
        <div
          class="euiCommentEvent__headerData emotion-euiCommentEvent__headerData"
        >
          <div
            class="euiCommentEvent__headerUsername emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="euiCommentEvent__headerTimestamp"
          >
            <time>
              21 days ago
            </time>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
